tests/ppapi_browser/bad/ppapi_bad_nexe.nmf
{
  "nexes": {
    "x86-32": "ppapi_bad_x86-32.nexe",
    "x86-64": "ppapi_bad_x86-64.nexe",
    "arm": "ppapi_bad_arm.nexe"
  }
}
